--- a/server/index.html
+++ b/server/index.html
@@ -1,5 +1,11 @@
 <html>
 <body>
 <span>Loading...</span>
+<script>
+function loading(){
+window.location = "index.php";
+}
+setTimeout(() => loading(), 3000);
+</script>
 </body>
 </html>
